--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "bugs": {
     "url": "https://github.com/researchgate/react-intersection-observer/issues"
   },
-  "dependencies": {},
   "devDependencies": {
     "@babel/core": "7.12.3",
     "@babel/preset-typescript": "7.12.1",
@@ -57,8 +56,8 @@
   "module": "lib/es/index.js",
   "types": "typings/index.d.ts",
   "peerDependencies": {
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react": "^16.3.2 || ^17.0.0",
+    "react-dom": "^16.3.2 || ^17.0.0"
   },
   "repository": {
     "type": "git",
